# portfolio

./: README.md
Lab02/github-fund/: .gitignore  package-lock.json  package.json
Lab02/github-fund/contracts/: DeveloperPayouts.sol  FundManager.sol  ValidatorMultiSig.sol
Lab02/github-fund/frontend/: app.js  index.html
Lab02/github-fund/scripts/: deploy.js
Lab02/github-fund/test/: test.js
lab004/: Main.hs
lab01/: HelloWorld.sol  RockPaperScissor.sol
lab03/: Main.hs
lab03/mhead-project/: .gitignore  CHANGELOG.md  README.md  mhead-project.cabal  package.yaml
lab03/mhead-project/src/: MHead.hs
lab03/mhead-project/test/: Spec.hs
lab05/: README.md  lab05.cabal  package.yaml
lab05/src/: Lab05.hs
lab05/test/: Lab05Spec.hs
lab10/snake-game/: package.yaml  snake-game.cabal
lab10/snake-game-rust/: Cargo.toml
lab10/snake-game-rust/src/: main.rs
lab11/: README.md
lab11/ecosim/: CHANGELOG.md  ecosim.cabal  package.yaml
lab11/rust-eco/: Cargo.toml
lab12/: README.md
lab12/rust-bprog/: Cargo.toml  arithmetic.bprog  bool.bprog  factorial.bprog  function.bprog  guess.bprog  if.bprog  list.bprog  prelude.bprog  stack.bprog
lab13/rust-compiler/: README.md  run_tests.bat  test.bprog  test_input.bprog  test_input.wat  verify_wat.bat
lab14/rust-go/: Cargo.toml  README.md  example.sgf
lab6/: README.md
lab6/src/: Lib.hs
lab7/: .gitignore
lab7/src/: Lib.hs
lab8/src/: main.rs
lab9/lab09-haskell/: .env  CHANGELOG.md  README.md  lab09-haskell.cabal  package.yaml
lab9/lab09_rust/: .env  .gitignore  Cargo.toml
lab9/lab09_rust/src/: main.rs
(+16 files in other folders)
